# AMP

./: readme
windplayer/AgouMediaPlayer/: .project  Android.mk  AndroidManifest.xml
windplayer/AgouMediaPlayer/res/layout/: about.xml  controler.xml  dialog.xml  extral.xml  list.xml  main.xml
windplayer/AgouMediaPlayer/res/values/: strings.xml
windplayer/AgouMediaPlayer/src/com/agou/media/: WindPlayer.java
windplayer/AgouMediaPlayer/src/com/agou/videoplayer/: SoundView.java  VideoChooseActivity.java  VideoPlayerActivity.java  VideoView.java
windplayer/android/: Android.mk  android_audio.cpp  android_audio.h  android_outer.cpp  android_outer.h  android_video.cpp  android_video.h  android_windplayer.cpp  android_windplayer.h  main.cpp
windplayer/jni/: Android.mk  readme.txt  wind_media_WindPlayer.cpp
windplayer/lib/: Android.mk  CMakeLists.txt  audioout.cpp  audioout.h  decoder.cpp  decoder.h  decoder_impl.cpp  decoder_impl.h  ffmpeg.h  masterclock.cpp  masterclock.h  output.cpp  output.h  packetList.cpp  packetList.h  videoout.cpp  videoout.h  windplayer.cpp  windplayer.h
windplayer/lib/sdl/: CMakeLists.txt  sdl.h  sdl_abstract.cpp  sdl_abstract.h  sdl_audioouter.cpp  sdl_audioouter.h  sdl_main.cpp  sdl_videoouter.cpp  sdl_videoouter.h  tutorial07.c
windplayer/lib/test/: CMakeLists.txt  test_decoder.cpp  test_packet_list.cpp
windplayer/libutils/: Android.mk  util_log_android.cpp  util_log_android.h  util_thread.cpp  util_thread.h
windplayer/ustl-1.0/: Android.mk  config.h
